# Project-Capstone

./: CMakeLists.txt  README.md  average_results.csv  data_handler.cpp  detailed_results.csv  graph.cpp  main.cpp  simulation.cpp  simulation.hpp
Include/: data_handler.hpp  graph.hpp  simulation.hpp
Results/: average_results.csv  detailed_results.csv
Src/: data_handler.cpp  graph.cpp  simulation.cpp
